deploy: db95c22b808aa7eb70602d0ac0e1ee4b1fb1b4c5

--- a/gql-community/fswg/index.html
+++ b/gql-community/fswg/index.html
@@ -191,7 +191,10 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p><strong>Group leaders:</strong> Leonid Libkin (ENS Paris, University of Edinburgh), Paolo Guagliardo (University of Edinburgh)</p>
+          <ul>
+<li><strong>Group leaders:</strong> Leonid Libkin (ENS Paris, University of Edinburgh), Paolo Guagliardo (University of Edinburgh)</li>
+<li><strong>Focus:</strong> Establishing formal semantics for the upcoming GQL language</li>
+</ul>
 
         </div>
       </div>
