deploy: ae72886692f45720760e331f7d4b19c34db9b547

--- a/publication/index.html
+++ b/publication/index.html
@@ -433,7 +433,7 @@ Leonid Libkin
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="/docs/papers/w16045-prepub-LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm btn-sm" href="/LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf" target="_blank" rel="noopener">
   
  PDF 
 </a>
