deploy: 353e2b57ff249bdf076cf9057f54ba461f566823

--- a/publication/ldbc-tr-tr-2021-01/index.html
+++ b/publication/ldbc-tr-tr-2021-01/index.html
@@ -316,6 +316,10 @@ Leonid Libkin
 
 
 
+<a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.54285/ldbc.TZJP7279" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 
