--- a/publication/index.html
+++ b/publication/index.html
@@ -460,6 +460,10 @@ Leonid Libkin
 
 
 
+<a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.54285/ldbc.TZJP7279" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 
