deploy: 5f18d339599bc65512ec36e9de96a9f2ce7d12ab

--- a/publication/index.html
+++ b/publication/index.html
@@ -467,7 +467,7 @@ Leonid Libkin
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm btn-sm" href="https://web.archive.org/web/20211105164539/https://ldbcouncil.org/docs/papers/LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf" target="_blank" rel="noopener">
   
  INTERNET ARCHIVE
 </a>
@@ -718,12 +718,6 @@ Jack Waudby
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
-
-
 
 </p>
 
@@ -851,12 +845,6 @@ Yinglong Xia
 
 
 
-
-
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
 
 
 
@@ -1068,12 +1056,6 @@ Gábor Szárnyas
 
 
 
-
-
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
 
 
 
@@ -1773,12 +1755,6 @@ Peter A. Boncz
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
-
-
 
 </p>
 
@@ -1883,12 +1859,6 @@ Atanas Kiryakov
 
 
 
-
-
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
 
 
 
@@ -3863,12 +3833,6 @@ Alex Averbuch
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
-
-
 
 </p>
 
@@ -4086,12 +4050,6 @@ Stephan Seufert
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
-
-
 
 </p>
 
@@ -4291,12 +4249,6 @@ Martin Neumann
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
-
-
 
 </p>
 
@@ -4407,12 +4359,6 @@ Aoying Zhou
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
-
-
 
 </p>
 
@@ -4519,12 +4465,6 @@ Josep Lluı́s Larriba-Pey
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
-
-
 
 </p>
 
@@ -4625,12 +4565,6 @@ Gonzalo Rios
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
-
-
 
 </p>
 
@@ -4720,12 +4654,6 @@ Orri Erling
 
 
 
-
-
-<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
-  
- INTERNET ARCHIVE
-</a>
 
 
 
