--- a/publication/ldbc-tr-tr-2021-01/index.html
+++ b/publication/ldbc-tr-tr-2021-01/index.html
@@ -325,7 +325,7 @@ Leonid Libkin
 
 
 
-<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm" href="https://web.archive.org/web/20211105164539/https://ldbcouncil.org/docs/papers/LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf" target="_blank" rel="noopener">
   
  INTERNET ARCHIVE
 </a>
