--- a/event/ninth-tuc-meeting/index.html
+++ b/event/ninth-tuc-meeting/index.html
@@ -564,7 +564,7 @@ LDBC OBI4wan.pdf</a> (application/pdf)<br>
 (application/pdf)<br>
 <img src="images/icons/bullet_blue.gif" alt="">
 <a href="attachments/59277315/76447745.pdf">ldbc-tuc2017-train-benchmark.pdf</a>
-(application/pdf)\</p>
+(application/pdf)</p>
 
         </div>
         <!-- tags -->
