deploy: a02dc4f124687b3a99260c18de1067e19cbfacb7

--- a/developer-community/index.html
+++ b/developer-community/index.html
@@ -195,11 +195,11 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>This is just a page stub.</p>
+          <p>If you are interested in joining our benchmark task forces, please reach out at <code>info@ldbcouncil.org</code>.</p>
 <h3 id="licensing">Licensing</h3>
-<p><em>Will be added later.</em></p>
-<h3 id="contributor-agreements">Contributor Agreements</h3>
-<p><em>Will be added later.</em></p>
+<p>Our benchmarks are licensed under the Apache Software License, Version 2.0 (<a href="/licensing/LICENSE.txt">license file</a>, <a href="/licensing/NOTICE.txt">notice file</a>).</p>
+<h3 id="contributor-license-agreement">Contributor License Agreement</h3>
+<p>To contribute to the LDBC repositories, we ask you to <a href="/becoming-a-member">sign a CLA or become an LDBC member</a>. These options are available for both individuals and organizations.</p>
 
         </div>
       </div>
