deploy: 6596601b77f41bbbd4e38265c58061ac47019a07

--- a/becoming-a-member/index.html
+++ b/becoming-a-member/index.html
@@ -212,6 +212,7 @@
 <li>Sponsor company/institution: € 8000</li>
 </ul>
 <h3 id="forms">Forms</h3>
+<p>For the latest information on becoming an LDBC member, see the <a href="/docs/LDBC.Membership.-.Joining.and.Renewing.2022.pdf">LDBC Membership – Joining and Renewing 2022</a> document.</p>
 <p>Please fill out the form applicable to your employment status and contribution, and email it to the <code>info@ldbcouncil.org</code> address.</p>
 <ul>
 <li><a href="/docs/LDBC.Membership.Application.and.Renewal.Form.2021-01-14.pdf">Membership form</a> (both for individuals and organizations)</li>
