deploy: 2dbcd8e7ddbd1fd665786b27d68f8543e7846518

--- a/gql-community/overview/index.html
+++ b/gql-community/overview/index.html
@@ -195,7 +195,12 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>This is just a page stub.</p>
+          <p>LDBC&rsquo;s working groups investigate research questions on graph query languages including the upcoming <a href="https://en.wikipedia.org/wiki/Graph_Query_Language">ISO GQL language</a>. We currently have three groups:</p>
+<ul>
+<li><a href="/gql-community/pgswg">Property Graph Schema Working Group</a></li>
+<li><a href="/gql-community/elwg">Existing Languages Working Group</a></li>
+<li><a href="/gql-community/fswg">Formal Semantics Working Group</a></li>
+</ul>
 
         </div>
       </div>
