deploy: 23a7d629b81f915da184d4001453bf600250c282

--- a/benchmarks/snb/audited-results-v0.2.2/index.html
+++ b/benchmarks/snb/audited-results-v0.2.2/index.html
@@ -218,7 +218,7 @@
 <td>2*Xeon 2630v3 8-core 2.4GHz, 256GB RAM</td>
 <td><a href="http://www.sparsity-technologies.com">Sparsity Technologies SA</a></td>
 <td>2015/04/27</td>
-<td><a href="LDBC_SNB_I_20150427_SF10_sparksee.pdf">Full Disclosure Report</a></td>
+<td><a href="../LDBC_SNB_I_20150427_SF10_sparksee.pdf">Full Disclosure Report</a></td>
 </tr>
 <tr>
 <td>30</td>
@@ -228,7 +228,7 @@
 <td>2*Xeon2630 6-core 2.4GHz, 192GB RAM</td>
 <td><a href="http://www.openlinksw.com">OpenLink Software</a></td>
 <td>2015/04/27</td>
-<td><a href="LDBC_SNB_I_20150427_SF30_virtuoso.pdf">Full Disclosure Report</a></td>
+<td><a href="../LDBC_SNB_I_20150427_SF30_virtuoso.pdf">Full Disclosure Report</a></td>
 </tr>
 <tr>
 <td>30</td>
@@ -238,7 +238,7 @@
 <td>2*Xeon 2630v3 8-core 2.4GHz, 256GB RAM</td>
 <td><a href="http://www.sparsity-technologies.com">Sparsity Technologies SA</a></td>
 <td>2015/04/27</td>
-<td><a href="LDBC_SNB_I_20150427_SF30_sparksee.pdf">Full Disclosure Report</a></td>
+<td><a href="../LDBC_SNB_I_20150427_SF30_sparksee.pdf">Full Disclosure Report</a></td>
 </tr>
 <tr>
 <td>100</td>
@@ -248,7 +248,7 @@
 <td>2*Xeon2630 6-core 2.4GHz, 192GB RAM</td>
 <td><a href="http://www.openlinksw.com">OpenLink Software</a></td>
 <td>2015/04/27</td>
-<td><a href="LDBC_SNB_I_20150427_SF100_virtuoso.pdf">Full Disclosure Report</a></td>
+<td><a href="../LDBC_SNB_I_20150427_SF100_virtuoso.pdf">Full Disclosure Report</a></td>
 </tr>
 <tr>
 <td>100</td>
@@ -258,7 +258,7 @@
 <td>2*Xeon 2630v3 8-core 2.4GHz, 256GB RAM</td>
 <td><a href="http://www.sparsity-technologies.com">Sparsity Technologies SA</a></td>
 <td>2015/04/27</td>
-<td><a href="LDBC_SNB_I_20150427_SF100_sparksee.pdf">Full Disclosure Report</a></td>
+<td><a href="../LDBC_SNB_I_20150427_SF100_sparksee.pdf">Full Disclosure Report</a></td>
 </tr>
 <tr>
 <td>300</td>
@@ -268,7 +268,7 @@
 <td>2*Xeon2630 6-core 2.4GHz, 192GB RAM</td>
 <td><a href="http://www.openlinksw.com">OpenLink Software</a></td>
 <td>2015/04/27</td>
-<td><a href="LDBC_SNB_I_20150427_SF300_virtuoso.pdf">Full Disclosure Report</a></td>
+<td><a href="../LDBC_SNB_I_20150427_SF300_virtuoso.pdf">Full Disclosure Report</a></td>
 </tr>
 </tbody>
 </table>
