deploy: 898c7d0b96e06b270d69c00baa3f8debe455bb57

--- a/benchmarks/overview/index.html
+++ b/benchmarks/overview/index.html
@@ -197,7 +197,7 @@
         <div class="content">
           <p>LDBC currently offers the following benchmarks:</p>
 <ul>
-<li><strong><a href="/benchmarks/graphalytics">Graphalyitcs</a>:</strong> graph algorithms for graph analytical platforms</li>
+<li><strong><a href="/benchmarks/graphalytics">Graphalytics</a>:</strong> graph algorithms for graph analytical platforms</li>
 <li><strong><a href="/benchmarks/spb">Semantic Publishing Benchmark</a></strong> an RDF-based benchmark for semantic databases</li>
 <li><strong><a href="/benchmarks/snb">Social Network Benchmark Suite</a>:</strong> targets graph database management systems. Consists of two workloads, Interactive and Business Intelligence (work-in-progress)</li>
 </ul>
