--- a/benchmarks/snb/index.html
+++ b/benchmarks/snb/index.html
@@ -206,7 +206,7 @@ times.</p>
 <li><strong>The Social Network Benchmark's Interactive workload</strong> is focusing on transactional graph processing with complex read queries that access the neighbourhood of a given node in the graph and update operations that continuously insert new data in the graph.</li>
 <li><strong>The Social Network Benchmark's Business Intelligence workload</strong> is focusing on aggregation- and join-heavy complex queries touching a large portion of the graph with microbatches of insert/delete operations. This workload is not yet finalized.</li>
 </ul>
-<h4 id="social-network-benchmark-interactive-version-032httpsarxivorgpdf200102299pdf-audited-results">Social Network Benchmark Interactive (<a href="https://arxiv.org/pdf/2001.02299.pdf">version 0.3.2</a>) audited results</h4>
+<h4 id="social-network-benchmark-interactive-audited-results">Social Network Benchmark Interactive audited results</h4>
 <h5 id="tugraph">TuGraph</h5>
 <p>TuGraph was audited in July 2020. TuGraph is owned by the <a href="https://www.antgroup.com/en">Ant Group</a> now.</p>
 <table>
@@ -219,6 +219,7 @@ times.</p>
 <th><strong>Hardware</strong></th>
 <th><strong>Test Sponsor</strong></th>
 <th><strong>Date</strong></th>
+<th><strong>SNB version</strong></th>
 <th><strong>Full Disclosure Report</strong></th>
 </tr>
 </thead>
@@ -231,6 +232,7 @@ times.</p>
 <td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
 <td><a href="https://fma-ai.cn/">FMA</a></td>
 <td>2020/07/26</td>
+<td><a href="https://arxiv.org/pdf/2001.02299v1.pdf">v0.3.2</a></td>
 <td><a href="LDBC_SNB_I_20200726_SF30-100-300_tugraph.pdf">Full Disclosure Report</a></td>
 </tr>
 <tr>
@@ -241,6 +243,7 @@ times.</p>
 <td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
 <td><a href="https://fma-ai.cn/">FMA</a></td>
 <td>2020/07/26</td>
+<td><a href="https://arxiv.org/pdf/2001.02299v1.pdf">v0.3.2</a></td>
 <td><a href="LDBC_SNB_I_20200726_SF30-100-300_tugraph.pdf">Full Disclosure Report</a></td>
 </tr>
 <tr>
@@ -251,6 +254,7 @@ times.</p>
 <td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
 <td><a href="https://fma-ai.cn/">FMA</a></td>
 <td>2020/07/26</td>
+<td><a href="https://arxiv.org/pdf/2001.02299v1.pdf">v0.3.2</a></td>
 <td><a href="LDBC_SNB_I_20200726_SF30-100-300_tugraph.pdf">Full Disclosure Report</a></td>
 </tr>
 </tbody>
