--- a/benchmarks/snb/index.html
+++ b/benchmarks/snb/index.html
@@ -219,7 +219,7 @@ times.</p>
 <th><strong>Hardware</strong></th>
 <th><strong>Test Sponsor</strong></th>
 <th><strong>Date</strong></th>
-<th><strong>SNB version</strong></th>
+<th><strong>SNB Version</strong></th>
 <th><strong>Full Disclosure Report</strong></th>
 </tr>
 </thead>
