--- a/benchmarks/snb/index.html
+++ b/benchmarks/snb/index.html
@@ -203,9 +203,10 @@ disclosure further breaks down the composition of the metric into its
 constituent parts, e.g. single query execution
 times.</p>
 <ul>
-<li><strong>The Social Network Benchmark's Interactive workload</strong> is focusing on transactional graph processing with complex read queries that access the neighbourhood of a given node in the graph and update operations that continuously insert new data in the graph.</li>
-<li><strong>The Social Network Benchmark's Business Intelligence workload</strong> is focusing on aggregation- and join-heavy complex queries touching a large portion of the graph with microbatches of insert/delete operations. This workload is not yet finalized.</li>
+<li><strong>The Social Network Benchmark's Interactive workload</strong> is focusing on transactional graph processing with complex read queries that access the neighbourhood of a given node in the graph and update operations that continuously insert new data in the graph. This workload is final an open for audits (see below).</li>
+<li><strong>The Social Network Benchmark's Business Intelligence workload</strong> is focusing on aggregation- and join-heavy complex queries touching a large portion of the graph with microbatches of insert/delete operations. This workload is not yet finalized, hence getting audited results is not possible.</li>
 </ul>
+<p>The <a href="https://arxiv.org/abs/2001.02299">LDBC Social Network Benchmark specification</a> (including the latest and earlier versions) can be found on arXiv.</p>
 <h4 id="social-network-benchmark-interactive-audited-results">Social Network Benchmark Interactive audited results</h4>
 <h5 id="tugraph">TuGraph</h5>
 <p>TuGraph was audited in July 2020. TuGraph is owned by the <a href="https://www.antgroup.com/en">Ant Group</a> now.</p>
