deploy: ae46a1aa51589b6641b9816c05323baca07d860e

--- a/benchmarks/graphalytics/index.html
+++ b/benchmarks/graphalytics/index.html
@@ -252,7 +252,9 @@ described below.</p>
 <li><a href="https://github.com/ldbc/ldbc_graphalytics_platforms_reference"><code>ldbc_graphalytics_platforms_reference</code></a>: Reference implementation</li>
 </ul>
 <h2 id="data-sets">Data sets</h2>
-<p>The data sets are currently available in a NextCloud directory. The data sets are compressed using <a href="https://github.com/facebook/zstd"><code>zstd</code></a>. The total size of the compressed archives is 326GB. Decompressed, it&rsquo;s approximately 1.1TB.</p>
+<p>The data sets are available in the <a href="https://repository.surfsara.nl/datasets/cwi/graphalytics">CWI/SURF data repository</a>.</p>
+<p>A mirror of the data sets is also available on the <a href="https://surfdrive.surf.nl/files/index.php/s/R8XkQNhVRLu9HaF">CWI/SURF NextCloud</a>.
+The data sets are compressed using <a href="https://github.com/facebook/zstd"><code>zstd</code></a>. The total size of the compressed archives is 326GB. Decompressed, it&rsquo;s approximately 1.1TB.</p>
 <table>
 <thead>
 <tr>
