--- a/benchmarks/graphalytics/index.html
+++ b/benchmarks/graphalytics/index.html
@@ -252,7 +252,7 @@ described below.</p>
 <li><a href="https://github.com/ldbc/ldbc_graphalytics_platforms_reference"><code>ldbc_graphalytics_platforms_reference</code></a>: Reference implementation</li>
 </ul>
 <h2 id="data-sets">Data sets</h2>
-<p>The data sets are available in the <a href="https://repository.surfsara.nl/datasets/cwi/graphalytics">CWI/SURF data repository</a>.</p>
+<p>The data sets are available in the <a href="https://hdl.handle.net/11112/7ec6a51e-6fdb-bf8d-4507-456ccadc9291">CWI/SURF data repository</a>.</p>
 <p>A mirror of the data sets is also available on the <a href="https://surfdrive.surf.nl/files/index.php/s/R8XkQNhVRLu9HaF">CWI/SURF NextCloud</a>.
 The data sets are compressed using <a href="https://github.com/facebook/zstd"><code>zstd</code></a>. The total size of the compressed archives is 326GB. Decompressed, it&rsquo;s approximately 1.1TB.</p>
 <table>
