deploy: 3685cbeac7204f23840b819ef4b438415cbb46fb

--- a/benchmarks/spb/index.html
+++ b/benchmarks/spb/index.html
@@ -205,7 +205,7 @@
 <thead>
 <tr>
 <th><strong>Scale Factor</strong></th>
-<th><strong>Interactive (Q/s)</strong></th>
+<th><strong>#Triples</strong> <strong>Interactive (Q/s)</strong></th>
 <th><strong>Updates (ops/sec)</strong></th>
 <th><strong>Analytical</strong></th>
 <th><strong>Cost</strong></th>
@@ -214,11 +214,13 @@
 <th><strong>Test Sponsor</strong></th>
 <th><strong>Date</strong></th>
 <th><strong>Full Disclosure Report</strong></th>
+<th></th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>1</td>
+<td>64M</td>
 <td>100.85</td>
 <td>10.19</td>
 <td>n.a.</td>
@@ -231,6 +233,7 @@
 </tr>
 <tr>
 <td>1</td>
+<td>64M</td>
 <td>142.7588</td>
 <td>10.6725</td>
 <td>n.a</td>
@@ -243,6 +246,7 @@
 </tr>
 <tr>
 <td>3</td>
+<td>256M</td>
 <td>29.90</td>
 <td>9.50</td>
 <td>n.a.</td>
@@ -255,6 +259,7 @@
 </tr>
 <tr>
 <td>3</td>
+<td>256M</td>
 <td>54.6364</td>
 <td>9.4967</td>
 <td>n.a</td>
@@ -267,6 +272,7 @@
 </tr>
 <tr>
 <td>1</td>
+<td>64M</td>
 <td>149.0385</td>
 <td>156.8325</td>
 <td>n.a.</td>
@@ -279,6 +285,7 @@
 </tr>
 <tr>
 <td>3</td>
+<td>256M</td>
 <td>80.6158</td>
 <td>92.7072</td>
 <td>n.a.</td>
@@ -291,6 +298,7 @@
 </tr>
 <tr>
 <td>3</td>
+<td>256M</td>
 <td>115.3838</td>
 <td>109.8517</td>
 <td>n.a.</td>
@@ -303,6 +311,7 @@
 </tr>
 <tr>
 <td>5</td>
+<td>1000M</td>
 <td>32.2789</td>
 <td>72.7192</td>
 <td>n.a.</td>
@@ -315,6 +324,7 @@
 </tr>
 <tr>
 <td>5</td>
+<td>10M</td>
 <td>45.8101</td>
 <td>55.4467</td>
 <td>n.a</td>
