deploy: c4ecfb5ac71ffe5f22853b89e00762ba5d8a9dea

--- a/benchmarks/spb/index.html
+++ b/benchmarks/spb/index.html
@@ -205,7 +205,8 @@
 <thead>
 <tr>
 <th><strong>Scale Factor</strong></th>
-<th><strong>#Triples</strong> <strong>Interactive (Q/s)</strong></th>
+<th><strong>#Triples</strong></th>
+<th><strong>Interactive (Q/s)</strong></th>
 <th><strong>Updates (ops/sec)</strong></th>
 <th><strong>Analytical</strong></th>
 <th><strong>Cost</strong></th>
@@ -214,7 +215,6 @@
 <th><strong>Test Sponsor</strong></th>
 <th><strong>Date</strong></th>
 <th><strong>Full Disclosure Report</strong></th>
-<th></th>
 </tr>
 </thead>
 <tbody>
