--- a/event/index.html
+++ b/event/index.html
@@ -208,7 +208,7 @@
   </div>
   <div class="position-relative mb-4 overflow-hidden">
     
-        <p>LDBC is hosting a one-day hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17 (Friday)</strong>. The tentative time range is 10:00–15:00 EST.</p>
+        <p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
 <p>If you are interested in giving a talk, please reach out to info at ldbcouncil.org</p>
 
     
