deploy: b179e598e2dd237e7c214bb4f9efb276676b616e

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -209,7 +209,203 @@
         </h5>
         <div class="content">
           <p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
-<p>If you are interested in giving a talk, please reach out to info at ldbcouncil.org</p>
+<p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and made available online.
+The tenative program is the following. <strong>All times are in EDT.</strong></p>
+<p>We will have a social event on Friday night (details TBA).</p>
+<h4 id="friday">Friday</h4>
+<table>
+<thead>
+<tr>
+<th>start</th>
+<th>finish</th>
+<th>speaker</th>
+<th>title</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>10:00</td>
+<td>10:10</td>
+<td>Peter Boncz (CWI)</td>
+<td>State of the union</td>
+</tr>
+<tr>
+<td>10:10</td>
+<td>10:25</td>
+<td>Alastair Green (Birkbeck)</td>
+<td>LDBC&rsquo;s fair use policies</td>
+</tr>
+<tr>
+<td>10:30</td>
+<td>10:45</td>
+<td>Gábor Szárnyas (CWI), Jack Waudby (Newcastle University)</td>
+<td>LDBC Social Network Benchmark: Business Intelligence workload v1.0</td>
+</tr>
+<tr>
+<td>10:50</td>
+<td>11:05</td>
+<td>Shipeng Qi (Ant Group)</td>
+<td>LDBC Financial Benchmark task force (tentative)</td>
+</tr>
+<tr>
+<td>11:10</td>
+<td>11:40</td>
+<td><em>coffee break</em></td>
+<td></td>
+</tr>
+<tr>
+<td>11:40</td>
+<td>11:55</td>
+<td>David Püroja (CWI)</td>
+<td>LDBC Social Network Benchmark: Interactive workload v2.0</td>
+</tr>
+<tr>
+<td>12:00</td>
+<td>12:15</td>
+<td>James Clarkson (Neo4j)</td>
+<td>LDBC benchmarks: Promoting good science and industrial consumption</td>
+</tr>
+<tr>
+<td>12:40</td>
+<td>12:35</td>
+<td>Oskar van Rest (Oracle Labs)</td>
+<td>Creating and querying property graphs in Oracle, on-premise and in the cloud</td>
+</tr>
+<tr>
+<td>12:20</td>
+<td>12:55</td>
+<td>Mingxi Wu (TigerGraph)</td>
+<td>Conquering LDBC-SNB BI at SF-10k</td>
+</tr>
+<tr>
+<td>13:00</td>
+<td>13:30</td>
+<td><em>coffee break</em></td>
+<td></td>
+</tr>
+<tr>
+<td>13:30</td>
+<td>13:45</td>
+<td>Altan Birler (TU Munich)</td>
+<td>Experiences with LDBC SNB BI for optimizing the Umbra DBMS</td>
+</tr>
+<tr>
+<td>13:50</td>
+<td>14:05</td>
+<td>Daniël ten Wolde (CWI)</td>
+<td>Implementing SQL/PGQ in DuckDB</td>
+</tr>
+<tr>
+<td>14:10</td>
+<td>14:25</td>
+<td>Benjamin Steer (Pometry)</td>
+<td>TBA</td>
+</tr>
+<tr>
+<td>14:30</td>
+<td>14:45</td>
+<td>Matteo Lissandrini (Aalborg University)</td>
+<td>Understanding graph data representations in triplestores</td>
+</tr>
+</tbody>
+</table>
+<h4 id="saturday">Saturday</h4>
+<table>
+<thead>
+<tr>
+<th>start</th>
+<th>finish</th>
+<th>speaker</th>
+<th>title</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>10:00</td>
+<td>10:15</td>
+<td>Keith Hare (WG3)</td>
+<td>An update on the GQL &amp; SQL/PGQ standards efforts</td>
+</tr>
+<tr>
+<td>10:20</td>
+<td>10:35</td>
+<td>Leonid Libkin (ENS Paris)</td>
+<td>GPML language</td>
+</tr>
+<tr>
+<td>10:40</td>
+<td>10:55</td>
+<td>Petra Selmer (Neo4j/WG3)</td>
+<td>An overview of GQL</td>
+</tr>
+<tr>
+<td>11:00</td>
+<td>11:15</td>
+<td>Alastair Green (LDBC/WG3)</td>
+<td>Technical manifesto for GQL 2.0</td>
+</tr>
+<tr>
+<td>11:20</td>
+<td>11:50</td>
+<td><em>coffee break</em></td>
+<td></td>
+</tr>
+<tr>
+<td>11:50</td>
+<td>12:05</td>
+<td>? (RelationalAI)</td>
+<td>Graph Normal Form (tentative)</td>
+</tr>
+<tr>
+<td>12:10</td>
+<td>12:25</td>
+<td>Arvind Shyamsundar (Microsoft)</td>
+<td>Graph capabilities in Microsoft SQL Server and Azure SQL Database</td>
+</tr>
+<tr>
+<td>12:30</td>
+<td>12:45</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>12:50</td>
+<td>13:05</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>13:10</td>
+<td>13:40</td>
+<td><em>coffee break</em></td>
+<td></td>
+</tr>
+<tr>
+<td>13:45</td>
+<td>14:00</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>14:05</td>
+<td>14:20</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>14:25</td>
+<td>14:40</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>14:45</td>
+<td>15:00</td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 
         </div>
         <!-- tags -->
