--- a/event/index.html
+++ b/event/index.html
@@ -209,8 +209,28 @@
   <div class="position-relative mb-4 overflow-hidden">
     
         <p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
-<p>If you are interested in giving a talk, please reach out to info at ldbcouncil.org</p>
-
+<p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and made available online.
+The tenative program is the following. <strong>All times are in EDT.</strong></p>
+<p>We will have a social event on Friday night (details TBA).</p>
+<h4 id="friday">Friday</h4>
+<table>
+<thead>
+<tr>
+<th>start</th>
+<th>finish</th>
+<th>speaker</th>
+<th>title</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>10:00</td>
+<td>10:10</td>
+<td>Peter Boncz (CWI)</td>
+<td>State of the union</td>
+</tr>
+<tr>
+<td>10:10 …</td></tr></tbody></table>
     
   </div>
 </div>
