--- a/index.html
+++ b/index.html
@@ -271,8 +271,7 @@
         </a>
         05 Apr 2022
         <p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
-<p>If you are interested in giving a talk, please reach out to info at ldbcouncil.org</p>
-
+<p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and …</p>
       </div>
       
       
