--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -298,8 +298,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:10</td>
 <td>14:25</td>
-<td>Benjamin Steer (Pometry)</td>
-<td>TBA</td>
+<td>Wim Martens</td>
+<td>Path Representations</td>
 </tr>
 <tr>
 <td>14:30</td>
@@ -353,8 +353,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>11:50</td>
 <td>12:05</td>
-<td>? (RelationalAI)</td>
-<td>Graph Normal Form (tentative)</td>
+<td>Benjamin Steer (Pometry)</td>
+<td>TBA</td>
 </tr>
 <tr>
 <td>12:10</td>
@@ -371,8 +371,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>12:50</td>
 <td>13:05</td>
-<td></td>
-<td></td>
+<td>Oszkár Semeráth, Kristóf Marussy (BME)</td>
+<td>TBA</td>
 </tr>
 <tr>
 <td>13:10</td>
@@ -383,8 +383,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>13:45</td>
 <td>14:00</td>
-<td></td>
-<td></td>
+<td>TBA (RelationalAI)</td>
+<td>Graph Normal Form (tentative)</td>
 </tr>
 <tr>
 <td>14:05</td>
@@ -395,8 +395,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:25</td>
 <td>14:40</td>
-<td></td>
-<td></td>
+<td>Domagoj Vrgoč (PUC Chile)</td>
+<td>Evaluating path queries in MillenniumDB</td>
 </tr>
 <tr>
 <td>14:45</td>
