--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -365,8 +365,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>12:30</td>
 <td>12:45</td>
-<td></td>
-<td></td>
+<td>George Fletcher (TU Eindhoven)</td>
+<td>PG-Keys (LDBC Property Graph Schema Working Group)</td>
 </tr>
 <tr>
 <td>12:50</td>
