deploy: 3ad325e5de8673016b9183ae26936859c57698e4

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -298,7 +298,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:10</td>
 <td>14:25</td>
-<td>Wim Martens</td>
+<td>Wim Martens (University of Bayreuth)</td>
 <td>Path Representations</td>
 </tr>
 <tr>
@@ -371,7 +371,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>12:50</td>
 <td>13:05</td>
-<td>Oszkár Semeráth, Kristóf Marussy (BME)</td>
+<td>Oszkár Semeráth, Kristóf Marussy (TU Budapest)</td>
 <td>TBA</td>
 </tr>
 <tr>
@@ -389,7 +389,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:05</td>
 <td>14:20</td>
-<td></td>
+<td>TBA</td>
 <td></td>
 </tr>
 <tr>
@@ -401,7 +401,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:45</td>
 <td>15:00</td>
-<td></td>
+<td>TBA</td>
 <td></td>
 </tr>
 </tbody>
