--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -389,8 +389,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:05</td>
 <td>14:20</td>
+<td>TBA ()</td>
 <td>TBA</td>
-<td></td>
 </tr>
 <tr>
 <td>14:25</td>
@@ -401,8 +401,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:45</td>
 <td>15:00</td>
+<td>TBA ()</td>
 <td>TBA</td>
-<td></td>
 </tr>
 </tbody>
 </table>
