deploy: 748f435d223f947a92bc7441beb86938ec013050

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -212,7 +212,7 @@
 <p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and made available online.
 The tenative program is the following. <strong>All times are in EDT.</strong></p>
 <p>We will have a social event on Friday night (details TBA).</p>
-<h4 id="friday">Friday</h4>
+<h4 id="friday-room-204bhttps2022sigmodorgprogramshtml">Friday (<a href="https://2022.sigmod.org/program.shtml">room 204B</a>)</h4>
 <table>
 <thead>
 <tr>
