--- a/event/index.html
+++ b/event/index.html
@@ -212,7 +212,7 @@
 <p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and made available online.
 The tenative program is the following. <strong>All times are in EDT.</strong></p>
 <p>We will have a social event on Friday night (details TBA).</p>
-<h4 id="friday">Friday</h4>
+<h4 id="friday-room-204bhttps2022sigmodorgprogramshtml">Friday (<a href="https://2022.sigmod.org/program.shtml">room 204B</a>)</h4>
 <table>
 <thead>
 <tr>
@@ -227,10 +227,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>10:00</td>
 <td>10:10</td>
 <td>Peter Boncz (CWI)</td>
-<td>State of the union</td>
-</tr>
-<tr>
-<td>10:10 …</td></tr></tbody></table>
+<td>State of the …</td></tr></tbody></table>
     
   </div>
 </div>
