deploy: 6c1443f53529f350e5764d94fd0ccec26725099e

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -299,7 +299,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>14:10</td>
 <td>14:25</td>
 <td>Wim Martens (University of Bayreuth)</td>
-<td>Path Representations</td>
+<td>Path representations</td>
 </tr>
 <tr>
 <td>14:30</td>
@@ -353,8 +353,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>11:50</td>
 <td>12:05</td>
-<td>Benjamin Steer (Pometry)</td>
-<td>TBA</td>
+<td>Naomi Arnold (Queen Mary University of London)</td>
+<td>Investigating the Alt-Right Network Gab with Temporal Interaction Graphs</td>
 </tr>
 <tr>
 <td>12:10</td>
