deploy: 9279274478bf1e5c763794b27fd48049b69569c9

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -296,16 +296,22 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>Implementing SQL/PGQ in DuckDB</td>
 </tr>
 <tr>
-<td>14:10</td>
-<td>14:25</td>
-<td>Wim Martens (University of Bayreuth)</td>
-<td>Path representations</td>
+<td>14:50</td>
+<td>15:05</td>
+<td>Angela Bonifati (Lyon 1 University)</td>
+<td>TBA</td>
 </tr>
 <tr>
 <td>14:30</td>
 <td>14:45</td>
 <td>Matteo Lissandrini (Aalborg University)</td>
 <td>Understanding graph data representations in triplestores</td>
+</tr>
+<tr>
+<td>14:50</td>
+<td>15:05</td>
+<td>Wim Martens (University of Bayreuth)</td>
+<td>Path representations</td>
 </tr>
 </tbody>
 </table>
