deploy: 771ff356b5b49404ba4db35d7015ba9b4cd655e1

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -378,7 +378,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>12:50</td>
 <td>13:05</td>
 <td>Oszkár Semeráth, Kristóf Marussy (TU Budapest)</td>
-<td>TBA</td>
+<td>Generation techniques for consistent, realistic, diverse, and scalable graphs</td>
 </tr>
 <tr>
 <td>13:10</td>
