deploy: b65a3ca6554a1d109d39d6ad7c6a9b19200c47d4

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -389,8 +389,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>13:45</td>
 <td>14:00</td>
-<td>TBA (RelationalAI)</td>
-<td>Graph Normal Form (tentative)</td>
+<td>Molham Aref (RelationalAI)</td>
+<td>Graph Normal Form</td>
 </tr>
 <tr>
 <td>14:05</td>
