--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -395,8 +395,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:05</td>
 <td>14:20</td>
-<td>TBA ()</td>
-<td>TBA</td>
+<td>Evren Sirin (Stardog)</td>
+<td>Stardog&rsquo;s experience with LDBC</td>
 </tr>
 <tr>
 <td>14:25</td>
