--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -254,10 +254,10 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td></td>
 </tr>
 <tr>
-<td>11:40</td>
-<td>11:55</td>
-<td>David Püroja (CWI)</td>
-<td>LDBC Social Network Benchmark: Interactive workload v2.0</td>
+<td>12:00</td>
+<td>12:15</td>
+<td>Will Wang (CreateLink)</td>
+<td>TBA</td>
 </tr>
 <tr>
 <td>12:00</td>
@@ -290,10 +290,10 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>Experiences with LDBC SNB BI for optimizing the Umbra DBMS</td>
 </tr>
 <tr>
-<td>13:50</td>
-<td>14:05</td>
-<td>Daniël ten Wolde (CWI)</td>
-<td>Implementing SQL/PGQ in DuckDB</td>
+<td>11:40</td>
+<td>11:55</td>
+<td>David Püroja (CWI)</td>
+<td>LDBC Social Network Benchmark: Interactive workload v2.0</td>
 </tr>
 <tr>
 <td>14:50</td>
@@ -357,10 +357,10 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td></td>
 </tr>
 <tr>
-<td>11:50</td>
-<td>12:05</td>
-<td>Naomi Arnold (Queen Mary University of London)</td>
-<td>Investigating the Alt-Right Network Gab with Temporal Interaction Graphs</td>
+<td>13:50</td>
+<td>14:05</td>
+<td>Daniël ten Wolde (CWI)</td>
+<td>Implementing SQL/PGQ in DuckDB</td>
 </tr>
 <tr>
 <td>12:10</td>
@@ -393,10 +393,10 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>Graph Normal Form</td>
 </tr>
 <tr>
-<td>14:05</td>
-<td>14:20</td>
-<td>Evren Sirin (Stardog)</td>
-<td>Stardog&rsquo;s experience with LDBC</td>
+<td>11:50</td>
+<td>12:05</td>
+<td>Naomi Arnold (Queen Mary University of London)</td>
+<td>Investigating the Alt-Right Network Gab with Temporal Interaction Graphs</td>
 </tr>
 <tr>
 <td>14:25</td>
@@ -405,10 +405,10 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>Evaluating path queries in MillenniumDB</td>
 </tr>
 <tr>
-<td>14:45</td>
-<td>15:00</td>
-<td>TBA ()</td>
-<td>TBA</td>
+<td>14:05</td>
+<td>14:20</td>
+<td>Evren Sirin (Stardog)</td>
+<td>Stardog&rsquo;s experience with LDBC</td>
 </tr>
 </tbody>
 </table>
