--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -407,7 +407,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>14:05</td>
 <td>14:20</td>
-<td>Evren Sirin (Stardog)</td>
+<td>Pavel Klinov, Evren Sirin (Stardog)</td>
 <td>Stardog&rsquo;s experience with LDBC</td>
 </tr>
 </tbody>
