deploy: 1dba4126bbf0bbee335eea2c0229df74ec75577f

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -254,8 +254,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td></td>
 </tr>
 <tr>
-<td>12:00</td>
-<td>12:15</td>
+<td>11:40</td>
+<td>11:55</td>
 <td>Will Wang (CreateLink)</td>
 <td>TBA</td>
 </tr>
@@ -266,13 +266,13 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>LDBC benchmarks: Promoting good science and industrial consumption</td>
 </tr>
 <tr>
-<td>12:40</td>
+<td>12:20</td>
 <td>12:35</td>
-<td>Oskar van Rest (Oracle Labs)</td>
+<td>Oskar van Rest (Oracle)</td>
 <td>Creating and querying property graphs in Oracle, on-premise and in the cloud</td>
 </tr>
 <tr>
-<td>12:20</td>
+<td>12:40</td>
 <td>12:55</td>
 <td>Mingxi Wu (TigerGraph)</td>
 <td>Conquering LDBC-SNB BI at SF-10k</td>
@@ -290,14 +290,14 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>Experiences with LDBC SNB BI for optimizing the Umbra DBMS</td>
 </tr>
 <tr>
-<td>11:40</td>
-<td>11:55</td>
+<td>13:50</td>
+<td>14:05</td>
 <td>David Püroja (CWI)</td>
 <td>LDBC Social Network Benchmark: Interactive workload v2.0</td>
 </tr>
 <tr>
-<td>14:50</td>
-<td>15:05</td>
+<td>14:10</td>
+<td>14:25</td>
 <td>Angela Bonifati (Lyon 1 University)</td>
 <td>TBA</td>
 </tr>
@@ -357,8 +357,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td></td>
 </tr>
 <tr>
-<td>13:50</td>
-<td>14:05</td>
+<td>11:50</td>
+<td>12:05</td>
 <td>Daniël ten Wolde (CWI)</td>
 <td>Implementing SQL/PGQ in DuckDB</td>
 </tr>
@@ -393,8 +393,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>Graph Normal Form</td>
 </tr>
 <tr>
-<td>11:50</td>
-<td>12:05</td>
+<td>14:05</td>
+<td>14:20</td>
 <td>Naomi Arnold (Queen Mary University of London)</td>
 <td>Investigating the Alt-Right Network Gab with Temporal Interaction Graphs</td>
 </tr>
@@ -405,8 +405,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>Evaluating path queries in MillenniumDB</td>
 </tr>
 <tr>
-<td>14:05</td>
-<td>14:20</td>
+<td>14:45</td>
+<td>15:00</td>
 <td>Pavel Klinov, Evren Sirin (Stardog)</td>
 <td>Stardog&rsquo;s experience with LDBC</td>
 </tr>
