deploy: cbc201580757170ce90ff60ebb5601b2d4537421

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -256,8 +256,8 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>11:40</td>
 <td>11:55</td>
-<td>Will Wang (CreateLink)</td>
-<td>TBA</td>
+<td>Chen Zhang (CreateLink)</td>
+<td>New LDBC SNB benchmark record by Galaxybase: 7 times faster and 70% higher throughput</td>
 </tr>
 <tr>
 <td>12:00</td>
