--- a/benchmarks/finbench/index.html
+++ b/benchmarks/finbench/index.html
@@ -195,7 +195,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>LDBC FinBench placeholder</p>
+          <p>LDBC FinBench (to be announced)</p>
 
         </div>
       </div>
