--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -224,92 +224,92 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 </thead>
 <tbody>
 <tr>
-<td>10:00</td>
-<td>10:10</td>
+<td>9:20</td>
+<td>9:30</td>
 <td>Peter Boncz (CWI)</td>
 <td>State of the union</td>
 </tr>
 <tr>
-<td>10:10</td>
-<td>10:25</td>
+<td>9:30</td>
+<td>9:45</td>
 <td>Alastair Green (Birkbeck)</td>
 <td>LDBC&rsquo;s fair use policies</td>
 </tr>
 <tr>
-<td>10:30</td>
-<td>10:45</td>
+<td>9:50</td>
+<td>10:05</td>
 <td>Gábor Szárnyas (CWI), Jack Waudby (Newcastle University)</td>
 <td>LDBC Social Network Benchmark: Business Intelligence workload v1.0</td>
 </tr>
 <tr>
-<td>10:50</td>
-<td>11:05</td>
+<td>10:10</td>
+<td>10:25</td>
 <td>Shipeng Qi (Ant Group)</td>
-<td>LDBC Financial Benchmark task force (tentative)</td>
+<td>LDBC Financial Benchmark task force</td>
 </tr>
 <tr>
-<td>11:10</td>
-<td>11:40</td>
+<td>10:30</td>
+<td>11:00</td>
 <td><em>coffee break</em></td>
 <td></td>
 </tr>
 <tr>
-<td>11:40</td>
-<td>11:55</td>
+<td>11:00</td>
+<td>11:15</td>
 <td>Chen Zhang (CreateLink)</td>
 <td>New LDBC SNB benchmark record by Galaxybase: 7 times faster and 70% higher throughput</td>
 </tr>
 <tr>
-<td>12:00</td>
-<td>12:15</td>
+<td>11:20</td>
+<td>11:35</td>
 <td>James Clarkson (Neo4j)</td>
 <td>LDBC benchmarks: Promoting good science and industrial consumption</td>
 </tr>
 <tr>
-<td>12:20</td>
-<td>12:35</td>
+<td>11:40</td>
+<td>11:55</td>
 <td>Oskar van Rest (Oracle)</td>
 <td>Creating and querying property graphs in Oracle, on-premise and in the cloud</td>
 </tr>
 <tr>
-<td>12:40</td>
-<td>12:55</td>
+<td>12:00</td>
+<td>12:15</td>
 <td>Mingxi Wu (TigerGraph)</td>
 <td>Conquering LDBC-SNB BI at SF-10k</td>
 </tr>
 <tr>
-<td>13:00</td>
-<td>13:30</td>
-<td><em>coffee break</em></td>
+<td>12:20</td>
+<td>13:20</td>
+<td><em>lunch (on your own)</em></td>
 <td></td>
 </tr>
 <tr>
-<td>13:30</td>
-<td>13:45</td>
+<td>13:20</td>
+<td>13:35</td>
 <td>Altan Birler (TU Munich)</td>
 <td>Experiences with LDBC SNB BI for optimizing the Umbra DBMS</td>
 </tr>
 <tr>
-<td>13:50</td>
-<td>14:05</td>
+<td>13:40</td>
+<td>13:55</td>
 <td>David Püroja (CWI)</td>
 <td>LDBC Social Network Benchmark: Interactive workload v2.0</td>
 </tr>
 <tr>
-<td>14:10</td>
-<td>14:25</td>
+<td>14:00</td>
+<td>14:15</td>
 <td>Angela Bonifati (Lyon 1 University)</td>
 <td>TBA</td>
 </tr>
 <tr>
-<td>14:30</td>
-<td>14:45</td>
+<td>14:20</td>
+<td>14:35</td>
 <td>Matteo Lissandrini (Aalborg University)</td>
 <td>Understanding graph data representations in triplestores</td>
 </tr>
 <tr>
-<td>14:50</td>
-<td>15:05</td>
+<td>14:40</td>
+<td>14:55</td>
 <td>Wim Martens (University of Bayreuth)</td>
 <td>Path representations</td>
 </tr>
@@ -352,61 +352,55 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 </tr>
 <tr>
 <td>11:20</td>
-<td>11:50</td>
-<td><em>coffee break</em></td>
-<td></td>
-</tr>
-<tr>
-<td>11:50</td>
-<td>12:05</td>
-<td>Daniël ten Wolde (CWI)</td>
-<td>Implementing SQL/PGQ in DuckDB</td>
-</tr>
-<tr>
-<td>12:10</td>
-<td>12:25</td>
-<td>Arvind Shyamsundar (Microsoft)</td>
-<td>Graph capabilities in Microsoft SQL Server and Azure SQL Database</td>
-</tr>
-<tr>
-<td>12:30</td>
-<td>12:45</td>
+<td>11:35</td>
 <td>George Fletcher (TU Eindhoven)</td>
 <td>PG-Keys (LDBC Property Graph Schema Working Group)</td>
 </tr>
 <tr>
-<td>12:50</td>
-<td>13:05</td>
+<td>11:40</td>
+<td>11:55</td>
+<td>Arvind Shyamsundar (Microsoft)</td>
+<td>Graph capabilities in Microsoft SQL Server and Azure SQL Database</td>
+</tr>
+<tr>
+<td>12:00</td>
+<td>13:30</td>
+<td><em>lunch</em></td>
+<td></td>
+</tr>
+<tr>
+<td>13:30</td>
+<td>13:45</td>
+<td>Daniël ten Wolde (CWI)</td>
+<td>Implementing SQL/PGQ in DuckDB</td>
+</tr>
+<tr>
+<td>13:50</td>
+<td>14:05</td>
 <td>Oszkár Semeráth, Kristóf Marussy (TU Budapest)</td>
 <td>Generation techniques for consistent, realistic, diverse, and scalable graphs</td>
 </tr>
 <tr>
-<td>13:10</td>
-<td>13:40</td>
-<td><em>coffee break</em></td>
-<td></td>
-</tr>
-<tr>
-<td>13:45</td>
-<td>14:00</td>
+<td>14:10</td>
+<td>14:25</td>
 <td>Molham Aref (RelationalAI)</td>
 <td>Graph Normal Form</td>
 </tr>
 <tr>
-<td>14:05</td>
-<td>14:20</td>
+<td>14:30</td>
+<td>14:45</td>
 <td>Naomi Arnold (Queen Mary University of London)</td>
 <td>Investigating the Alt-Right Network Gab with Temporal Interaction Graphs</td>
 </tr>
 <tr>
-<td>14:25</td>
-<td>14:40</td>
+<td>14:50</td>
+<td>15:05</td>
 <td>Domagoj Vrgoč (PUC Chile)</td>
 <td>Evaluating path queries in MillenniumDB</td>
 </tr>
 <tr>
-<td>14:45</td>
-<td>15:00</td>
+<td>15:10</td>
+<td>15:25</td>
 <td>Pavel Klinov, Evren Sirin (Stardog)</td>
 <td>Stardog&rsquo;s experience with LDBC</td>
 </tr>
