deploy: 1e365769e36b43a541c7bd696c50fda1b41a37de

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -301,7 +301,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>14:00</td>
 <td>14:15</td>
 <td>Angela Bonifati (Lyon 1 University)</td>
-<td>The Quest for Schemas in Graph Databases</td>
+<td>The quest for schemas in graph databases</td>
 </tr>
 <tr>
 <td>14:20</td>
