deploy: 5cfe4184ef2df17acfd2991bea59ae6790fe278a

--- a/benchmarks/snb/index.html
+++ b/benchmarks/snb/index.html
@@ -210,8 +210,6 @@ times.</p>
 </ul>
 <p>The <a href="https://arxiv.org/abs/2001.02299">LDBC Social Network Benchmark specification</a> (including the latest and earlier versions) can be found on arXiv.</p>
 <h4 id="social-network-benchmark-interactive-audited-results">Social Network Benchmark Interactive audited results</h4>
-<h5 id="tugraph">TuGraph</h5>
-<p>TuGraph was audited in July 2020. TuGraph is owned by the <a href="https://www.antgroup.com/en">Ant Group</a> now.</p>
 <table>
 <thead>
 <tr>
@@ -227,6 +225,39 @@ times.</p>
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>30</td>
+<td>9,285.86</td>
+<td>$263,282</td>
+<td><a href="https://galaxybase.com/">Galaxybase 3.3.0</a></td>
+<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
+<td><a href="https://www.galaxybase.com/">CreateLink</a></td>
+<td>2022/05/16</td>
+<td><a href="https://arxiv.org/pdf/2001.02299v2.pdf">v0.3.3</a></td>
+<td><a href="LDBC_SNB_I_20220516_SF30-100-300_galaxybase.pdf">Full Disclosure Report</a></td>
+</tr>
+<tr>
+<td>100</td>
+<td>8,501.21</td>
+<td>$263,282</td>
+<td><a href="https://galaxybase.com/">Galaxybase 3.3.0</a></td>
+<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
+<td><a href="https://www.galaxybase.com/">CreateLink</a></td>
+<td>2022/05/16</td>
+<td><a href="https://arxiv.org/pdf/2001.02299v2.pdf">v0.3.3</a></td>
+<td><a href="LDBC_SNB_I_20220516_SF30-100-300_galaxybase.pdf">Full Disclosure Report</a></td>
+</tr>
+<tr>
+<td>300</td>
+<td>8,370.52</td>
+<td>$263,282</td>
+<td><a href="https://galaxybase.com/">Galaxybase 3.3.0</a></td>
+<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
+<td><a href="https://www.galaxybase.com/">CreateLink</a></td>
+<td>2022/05/16</td>
+<td><a href="https://arxiv.org/pdf/2001.02299v2.pdf">v0.3.3</a></td>
+<td><a href="LDBC_SNB_I_20220516_SF30-100-300_galaxybase.pdf">Full Disclosure Report</a></td>
+</tr>
 <tr>
 <td>30</td>
 <td>5,436.47</td>
@@ -262,12 +293,20 @@ times.</p>
 </tr>
 </tbody>
 </table>
-<p>Supplementary material for the TuGraph audits:</p>
+<h4 id="supplementary-materials">Supplementary materials</h4>
+<p>Supplementary material for the <strong>Galaxybase audits</strong>:</p>
+<ul>
+<li><a href="LDBC_SNB_I_20220516_SF30-100-300_galaxybase-executive_summary.pdf">Executive summary</a></li>
+<li><a href="LDBC_SNB_I_20220516_SF30-100-300_galaxybase-signatures.pdf">Signatures</a></li>
+<li><a href="https://drive.google.com/file/d/1tUxtWJAP1r8tRYtJevo436QBir4NZ5iA/view?usp=sharing">Attachments</a></li>
+</ul>
+<p>Supplementary material for the <strong>TuGraph audits</strong>:</p>
 <ul>
 <li><a href="LDBC_SNB_I_20200726_SF30-100-300_tugraph-executive_summary.pdf">Executive summary</a></li>
 <li><a href="LDBC_SNB_I_20200726_SF30-100-300_tugraph-signatures.pdf">Signatures</a></li>
 <li><a href="https://drive.google.com/file/d/198UrkL7_vduOm5MTneVniiYBG8U2a8x9/view?usp=sharing">Attachments</a></li>
 </ul>
+<p>TuGraph was audited in July 2020. TuGraph is owned by the <a href="https://www.antgroup.com/en">Ant Group</a> now.</p>
 <h4 id="legacy-audited-results">Legacy audited results</h4>
 <p><a href="/benchmarks/snb/audited-results-v0.2.2">Social Network Benchmark Interactive, version 0.2.2</a></p>
 
